--- a/css/base.css
+++ b/css/base.css
@@ -4,6 +4,16 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+body {
+  /*max-width: 900px;*/
+  font-size: 14px;
+  font-family: "微软雅黑";
+  list-style: none;
+  color: #333333;
+  min-width: 900px;
+  overflow: auto;
+  background-color: #f7f7f7;
+}
 
 
 /* 内外边距通常让各个浏览器样式的表现位置不同 */
@@ -189,15 +199,7 @@ sub {
 
 /*resetcss结束*/
 
-body {
-  /*max-width: 900px;*/
-  font-size: 14px;
-  font-family: "微软雅黑";
-  list-style: none;
-  color: #333333;
-  min-width: 1200px;
-  overflow: auto;
-}
+
 
 p,
 ul {
@@ -215,58 +217,15 @@ section {
 }
 
 
-/*解决ios样式问题*/
-
-input,
-button,
-select,
-textarea {
-  font-family: "微软雅黑";
-  outline: none;
-  border: 0;
-  background: #fff;
-  font-size: 14px;
-  -webkit-appearance: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  resize: none;
-}
-
 a,
 span,
 p,
 li,
 img {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  display: inline-block;
 }
 
-input[type="radio"] {
-  opacity: 0;
-}
-
-
-/*label { pointer-events:none;}*/
-
-select {
-  width: 70%;
-  border: 0;
-  height: 30px;
-  color: #aaa;
-}
-
-option {
-  color: black;
-}
-
-textarea {
-  border: 0;
-  width: 200px;
-  vertical-align: top;
-  padding: 7px 0;
-}
-
-textarea::placeholder {
-  margin-top: 20px;
-}
 
 li {
   list-style: none;
@@ -489,27 +448,21 @@ li {
 
 header {
 width: 100%;
-height: 150px;
-background-color: #eaeff2;
+height: 74px;
+background-color: rgba(0, 0, 0, 0.71);
 
 }
 aside {
-  width: 200px;
-  height: 900px;
-  margin-top: 20px;
+  width: 177px;
+  height: 580px;
   float: left;
-  background-color: #eaeff2;
+  background-color: rgba(0, 0, 0, 0.61);
 }
 footer {
   width: 100%;
   height: 200px;
   margin-top:20px;
   background-color: #000000;
-}
-.main {
-  height: 900px;
-  margin: 20px 0 0 220px;
-  background-color: #eaeff2;
 }
 
 .icon-back {
