--- a/view/dialog-scheduling-view.html
+++ b/view/dialog-scheduling-view.html
@@ -23,7 +23,7 @@
         <span class="add">添加</span>
       </div>
       <div class="scheduling-detail bg-table">
-        <table class="text-left">
+        <table>
           <tr>
             <th class="table-head">大棚名称</th>
             <th class="table-head">排产作物</th>
@@ -95,9 +95,9 @@
       </div>
     </div>
     <!-- 查看排产管理 -->
-    <div class="dialog-scheduling scheduling-view-content hide">
+    <div class="dialog-scheduling scheduling-view-content">
       <div class="dialog-content">
-          <p class="center border-bottom pb10 mb10">查看排产模型 <span class="right color-gray close-view">X</span></p>
+          <p class="center border-bottom pb10 mb10">查看排产模型 <span class="right color-gray">X</span></p>
         <div class="scheduling-detail">
           <table>
             <tr>
@@ -117,8 +117,9 @@
             <tr>
               <td>排产种植区:</td>
               <td>BJ-01-01号大棚</td>
-              <td>排产类型:</td>
-              <td>计划排产</td>
+              <td>排产类型:
+                <td/>
+                <td>计划排产</td>
             </tr>
           </table>
         </div>
@@ -160,7 +161,7 @@
           </table>
           <p class="text-right mt20">总产量: 0kg/亩</p>
         </div>
-        <div class="center"><span class="bg-gray  button close-view">返回</span></div>
+        <div class="center"><span class="bg-gray  button">返回</span></div>
       </div>
     </div>
     <!-- 编辑排查管理 -->
