--- a/view/schedulingMgmt.html
+++ b/view/schedulingMgmt.html
@@ -95,7 +95,7 @@
       </div>
     </div>
     <!-- 添加排产管理未选基地-->
-    <div class="dialog-scheduling scheduling-add-content hide">
+  <!--   <div class="dialog-scheduling scheduling-add-content hide">
       <div class="dialog-content">
         <p class="center border-bottom pb16">选择基地<span class="right color-gray close-add">X</span></p>
         <div class="add-detail center border-bottom">
@@ -108,7 +108,7 @@
             <span class="button bg-gray close-add">返回</span>
           </div>
       </div>
-    </div>
+    </div> -->
     <!-- 查看排产管理 -->
     <div class="dialog-scheduling scheduling-view-content hide">
       <div class="dialog-content">
