--- a/view/schedulingView.html
+++ b/view/schedulingView.html
@@ -11,12 +11,12 @@
   <aside></aside>
   <div class="scheduling-main"> 
    <nav class="nav-head">
-     <span>生成计划<i class="color-gray arrow">></i>排产管理<i class="color-gray arrow">></i>查看排产计划</span>
+     <span>生产计划<i class="color-gray arrow">></i>排产管理<i class="color-gray arrow">></i>查看排产计划</span>
    </nav>
    <div class="scheduling-content">
      
     <div class="scheduling-detail">
-      <table>
+      <table class="bg-table border" border="1">
         <tr>
           <td>排产种植区:</td>
           <td>BJ-01-01号大棚</td>
@@ -36,7 +36,7 @@
           <td>计划排产</td>
         </tr>
       </table>
-      <a class="back" href="schedulingMgmt.html">返回</a>
+       <div class="center mt20"><span class="button bg-gray close-add">返回</span></div>
       <div class="page">
         <div class="left">
           <span class="mr20">共21条</span>
