生产计划-编辑

--- a/css/base.css
+++ b/css/base.css
@@ -539,6 +539,7 @@ footer {
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,.6);
+  overflow: auto;
 }
 .dialog-content {
   background-color: #fff;
