--- a/view/dialog-scheduling-add1.html
+++ b/view/dialog-scheduling-add1.html
@@ -95,7 +95,7 @@
       </div>
     </div>
     <!-- 添加排产管理未选基地-->
-    <div class="dialog-scheduling scheduling-add-content hide">
+    <div class="dialog-scheduling scheduling-add-content">
       <div class="dialog-content">
         <p class="center border-bottom pb16">选择基地<span class="right color-gray close-add">X</span></p>
         <div class="add-detail center border-bottom">
@@ -180,7 +180,7 @@
     </div>
     <!-- 编辑排查管理 -->
     <div class="dialog-scheduling scheduling-edit-content hide">
-      <div class="dialog-content">
+      <div class="dialog-content mt40">
         <p class="center border-bottom pb10 mb10">编辑排产模型 <span class="right color-gray close-edit">X</span></p>
         <div class="scheduling-detail">
           <table>
