--- a/css/management.css
+++ b/css/management.css
@@ -198,18 +198,64 @@ input[type="date" i]{
   color:#ffffff;
   padding: 0 16px;
   text-align: center; 
-  
 }
 .zuowu {
   background-color: #ffa018;
 }
 .chanliang {
   background-color: #479e7d;
-
 }
 .zuowu-chanliang {
   position: relative;
 }
 .zuowu-chanliang:hover .scheduling-fuceng {
   display: block;
+}
+
+/*编辑排产计划*/
+.plan-edit {
+  position: absolute;
+  top: 0;
+  right:0;
+  height: 100%;
+  /*width: 300px;*/
+  background-color: #ffffff;
+  border: 1px solid #eeeeee;
+  border-top: 0;
+  margin: 0;
+  overflow: auto;
+}
+
+.plan-edit-title {
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  background-color: #479e7d;
+  color:#ffffff;
+  margin:0;
+  text-indent: 16px;
+}
+.plan-edit-content {
+  padding: 16px;
+}
+.plan-edit-content
+.message,
+.plan-edit-content
+.time,
+.plan-edit-content .output {
+  padding-bottom: 16px;
+}
+.plan-edit-content
+.message p,
+.plan-edit-content
+.time p,
+.plan-edit-content .output p {
+  padding-bottom: 12px;
+}
+.grow-rule {
+  border:1px solid #dddddd;
+  height: 30px;
+  line-height: 30px;
+  width: 48px;
+  text-align: center;
 }
