--- a/view/dialog-scheduling-add.html
+++ b/view/dialog-scheduling-add.html
@@ -41,10 +41,10 @@
             <td>2017-04-10</td>
             <td>2017-04-10</td>
             <td>
-              <span class="mr20 scheduling-view pointer"><img src="../images/tu_18.png" class="scheduling-icon">查看</span>
+              <span  class="mr20 scheduling-view pointer"><img src="../images/tu_18.png" class="scheduling-icon">查看</span>
               <span class="mr20 scheduling-edit pointer"><img src="../images/tu_15.png" class="scheduling-icon">编辑</span>
               <span class="mr20 pointer"><img src="../images/tu_01.png" class="scheduling-icon">确认</span>
-              <span class="pointer"><img src="../images/tu_21.png" class="scheduling-icon">删除</span>
+              <span class="pointer" ><img src="../images/tu_21.png" class="scheduling-icon">删除</span>
             </td>
           </tr>
           <tr>
@@ -55,10 +55,10 @@
             <td>2017-04-10</td>
             <td>2017-04-10</td>
             <td>
-              <span class="mr20 scheduling-view pointer"><img src="../images/tu_18.png" class="scheduling-icon">查看</span>
+              <span  class="mr20 scheduling-view pointer"><img src="../images/tu_18.png" class="scheduling-icon">查看</span>
               <span class="mr20 scheduling-edit pointer"><img src="../images/tu_15.png" class="scheduling-icon">编辑</span>
               <span class="mr20 pointer"><img src="../images/tu_01.png" class="scheduling-icon">确认</span>
-              <span class="pointer"><img src="../images/tu_21.png" class="scheduling-icon">删除</span>
+              <span class="pointer" ><img src="../images/tu_21.png" class="scheduling-icon">删除</span>
             </td>
           </tr>
           <tr>
@@ -69,10 +69,10 @@
             <td>2017-04-10</td>
             <td>2017-04-10</td>
             <td>
-              <span class="mr20 scheduling-view pointer"><img src="../images/tu_18.png" class="scheduling-icon">查看</span>
+              <span  class="mr20 scheduling-view pointer"><img src="../images/tu_18.png" class="scheduling-icon">查看</span>
               <span class="mr20 scheduling-edit pointer"><img src="../images/tu_15.png" class="scheduling-icon">编辑</span>
               <span class="mr20 pointer"><img src="../images/tu_01.png" class="scheduling-icon">确认</span>
-              <span class="pointer"><img src="../images/tu_21.png" class="scheduling-icon">删除</span>
+              <span class="pointer" ><img src="../images/tu_21.png" class="scheduling-icon">删除</span>
             </td>
           </tr>
         </table>
@@ -94,103 +94,57 @@
         </div>
       </div>
     </div>
-    <!-- 添加排产管理已选基地休耕状态-->
+     <!-- 添加排产管理已选基地休耕状态-->
     <div class="dialog-scheduling scheduling-add-content">
       <div class="dialog-content">
-        <p class="center border-bottom pb16">添加排产计划<span class="right color-gray close-add">X</span></p>
-        <div class="add-detail mb10">
-          <p class="mb10"><span class="mr30">种植区:</span>
-            <select class="select-160 mr20">
-              <option>BJ-01-01号大棚</option>
-              <option>BJ-01-01号大棚</option>
-            </select>
+      <p class="center border-bottom pb16">添加排产计划<span class="right color-gray close-add">X</span></p>
+      <div class="add-detail mb20">
+          <p class="mb10"><span class="mr30">种植区:</span><select class="select-160 mr20">
+            <option>BJ-01-01号大棚</option>
+            <option>BJ-01-01号大棚</option>
+          </select>
             作物种类：
-            <select class="select-160">
-              <option>小黄瓜</option>
-              <option>茄子</option>
-            </select>
-            <p>
-              <p class="mb10">
-                种植品种：
-                <select class="select-160 mr20">
-                  <option>无品种</option>
-                  <option>西兰花</option>
-                </select>
-                种植标准：
-                <select class="select-160">
-                  <option>无机</option>
-                  <option>有机</option>
-                </select>
-              </p>
-              <p class="mb10">
-                种苗来源：
-                <select class="select-160 mr20">
-                  <option>无机</option>
-                  <option>自繁</option>
-                  <option>购买</option>
-                </select>
-              </p>
-        </div>
-        <p class="text-left border-bottom pb10">休耕时间</p>
-        <div class="add-detail mb10">
-          <p>定植时间：
-            <input type="date" class="select-160 mr20"> 采收开始：
-            <input type="date" class="select-160">
+          <select class="bg-gray select-160">
+            <option>休耕</option>
+          </select><p>
+          <p class="mb10">
+            种植品种：
+          <select class="select-160 mr20">
+            <option>无品种</option>
+            <option>西兰花</option>
+          </select>
+            种植标准：
+           <select class="select-160">
+            <option>无机</option>
+             <option>有机</option>
+          </select>
           </p>
-          <p class="mb10">植种结束：
-            <input type="date" class="select-160 mr20"> 种植面积：
-            <input type="text" class="pinzhong"> <span>亩/3.9亩可用</p>
-          </p>
-          <p>预估产量：
-            <select class="select-160 mr20">
-              <option>亩产量</option>
-              <option>亩产量</option>
-            </select>
+          <p class="mb10">
+            种苗来源：
+          <select class="select-160 mr20">
+            <option>无机</option>
+            <option>自繁</option>
+            <option>购买</option>
+          </select>
           </p>
         </div>
-        <p class="text-left border-bottom pb10 mb10">亩商品量(kg/亩)</p>
-        <table class="border table-month" border="1">
-            <tr>
-              <td>1月份</td>
-              <td></td>
-              <td>2月份</td>
-              <td></td>
-              <td>3月份</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>4月份</td>
-              <td></td>
-              <td>5月份</td>
-              <td></td>
-              <td>6月份</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>7月份</td>
-              <td></td>
-              <td>8月份</td>
-              <td></td>
-              <td>9月份</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>10月份</td>
-              <td></td>
-              <td>11月份</td>
-              <td></td>
-              <td>12月份</td>
-              <td></td>
-            </tr>
-        </table>
-        <p class="text-right mt20">总产量: 0kg/亩</p>
-        <div class="center mt20">
+      <p class="text-left border-bottom pb16">休耕时间</p>
+      <div class="add-detail">
+           <p>开始时间：
+          <input type="date" class="select-160 mr20">
+          结束时间：
+           <input type="date" class="select-160">
+        </p>
+        <p>作物种类：
+          <input type="text" class="pinzhong"> <span>亩/3.9亩可用</p>
+      </div>
+      <div class="center mt20">
         <span class="button bg-yellow mr20">保存</span>
         <span class="button bg-gray close-add">返回</span>
-        </div>
+      </div>
       </div>
     </div>
-  </div>
+ </div>
 </body>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/main.js"></script>
