--- a/view/dialog-plan-edit.html
+++ b/view/dialog-plan-edit.html
@@ -82,8 +82,36 @@
 <script src="../js/jquery.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="../js/main.js"></script>
+<script>
+  //图表相关
+  var chart = Highcharts.chart('container', {
+    xAxis: {
+       categories: ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月', '9月', '10月', '11月', '12月'],
+        labels:{ 
+        step:2 //刻度间隔
+    } 
+    },
+     yAxis:{  
+      title: {  
+            text: ''  
+        },  
+      tickPixelInterval:10 
+    },  
+    title: {  
+      text: ''//标题为空  
+    },  
+    credits: {  
+        enabled: false//右下角图表版权信息不显示  
+    },
+    legend: {  
+      enabled: false//右下角图表版权信息不显示  
+    },  
+    series: [{
+        data: [12, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 594.1, 95.6, 54.4]
+    }]
+});
 
-
+</script>
 
 
 </html>
