--- a/view/dialog-scheduling-add2.html
+++ b/view/dialog-scheduling-add2.html
@@ -129,7 +129,7 @@
             </select>
             </p>
         </div>
-        <p class="text-left border-bottom pb10">休耕时间</p>
+        <p class="text-left border-bottom pb10">采收信息</p>
         <div class="add-detail mb10">
           <p>定植时间：
             <input type="date" class="select-160 mr20">
@@ -144,7 +144,7 @@
           <p>预估产量：
             <select class="select-160 mr20">
               <option>亩产量</option>
-              <option>亩产量</option>
+              <option>地块产量</option>
             </select>
           </p>
         </div>
