--- a/view/dialog-scheduling-view.html
+++ b/view/dialog-scheduling-view.html
@@ -95,7 +95,7 @@
       </div>
     </div>
     <!-- 添加排产管理未选基地-->
-  <!--   <div class="dialog-scheduling scheduling-add-content hide">
+    <div class="dialog-scheduling scheduling-add-content hide">
       <div class="dialog-content">
         <p class="center border-bottom pb16">选择基地<span class="right color-gray close-add">X</span></p>
         <div class="add-detail center border-bottom">
@@ -108,37 +108,47 @@
             <span class="button bg-gray close-add">返回</span>
           </div>
       </div>
-    </div> -->
+    </div>
     <!-- 查看排产管理 -->
     <div class="dialog-scheduling scheduling-view-content">
       <div class="dialog-content">
-          <p class="center border-bottom pb10 mb10">查看排产模型 <span class="right color-gray close-view">X</span></p>
+          <p class="center border-bottom pb10 mb10">查看排产计划<span class="right color-gray close-view">X</span></p>
         <div class="scheduling-detail">
           <table class="bg-table border center" border="1">
             <tr>
-              <td>排产种植区:</td>
-              <td>BJ-01-01号大棚</td>
-              <td>排产类型:
-                </td>
-                <td>计划排产</td>
-            </tr>
-            <tr>
-              <td>排产种植区:</td>
-              <td>BJ-01-01号大棚</td>
-              <td>排产类型:
-                </td>
-                <td>计划排产</td>
-            </tr>
-            <tr>
-              <td>排产种植区:</td>
-              <td>BJ-01-01号大棚</td>
+              <td>所在大棚:</td>
+              <td>BG-DJ-02号大棚</td>
               <td>排产类型:</td>
               <td>计划排产</td>
+            </tr>
+            <tr>
+              <td>作物种类:</td>
+              <td>油菜</td>
+              <td>排产品种:</td>
+              <td>小油菜</td>
+            </tr>
+            <tr>
+              <td>排产标准:</td>
+              <td>有机</td>
+              <td>排产时间:</td>
+              <td>2017-05-01</td>
+            </tr>
+            <tr>
+              <td>采收开始:</td>
+              <td>2017-08-01</td>
+              <td>排产结束:</td>
+              <td>2017-08-20</td>
+            </tr>
+            <tr>
+              <td>追溯排产名称:</td>
+              <td></td>
+              <td>排产面积:</td>
+              <td>3.07亩</td>
             </tr>
           </table>
         </div>
         <div class="scheduling-detail mt20">
-          <p class="text-left border-bottom pb10 mb10">亩商品量(kg/亩)</p>
+          <p class="text-left border-bottom pb10 mb10">预估产量：亩产量(kg)</p>
           <table class="border table-month" border="1">
             <tr>
               <td>1月份</td>
@@ -160,7 +170,7 @@
               <td>7月份</td>
               <td></td>
               <td>8月份</td>
-              <td></td>
+              <td>7384.0</td>
               <td>9月份</td>
               <td></td>
             </tr>
@@ -180,7 +190,7 @@
     </div>
     <!-- 编辑排查管理 -->
     <div class="dialog-scheduling scheduling-edit-content hide">
-      <div class="dialog-content mt40">
+      <div class="dialog-content">
         <p class="center border-bottom pb10 mb10">编辑排产模型 <span class="right color-gray close-edit">X</span></p>
         <div class="scheduling-detail">
           <table>
