--- a/css/management.css
+++ b/css/management.css
@@ -21,6 +21,7 @@
   color: #ffffff;
   text-align: center;
   box-sizing:border-box;
+  border-radius: 3px;
 }
 .arrow {
   font-size: 18px;
@@ -148,8 +149,8 @@ padding: 2px 5px;
    padding: 0 20px;
 }
 .scheduling-detail tr{
-  height: 40px;
-  line-height: 40px;
+  height: 33px;
+  line-height: 33px;
   padding: 0 20px;
 }
 
@@ -187,9 +188,11 @@ height: 27px;
 width: 50px;
 margin-top: 10px;
 margin-right: 10px;
+border-radius: 3px;
 }
 input[type="date" i]{
   font-family: "微软雅黑" !important;
+  color: #333333;
 }
 
 /*排产计划*/
