--- a/view/dialog-scheduling-add2.html
+++ b/view/dialog-scheduling-add2.html
@@ -97,7 +97,7 @@
      <!-- 添加排产管理已选基地未耕状态-->
     <div class="dialog-scheduling scheduling-add-content">
       <div class="dialog-content">
-        <p class="center border-bottom pb16">添加排产计划<span class="right color-gray close-add">X</span></p>
+        <p class="center border-bottom pb10">添加排产计划<span class="right color-gray close-add">X</span></p>
         <div class="add-detail mb10">
             <p class="mb10"><span class="mr30">种植区:</span><select class="select-160 mr20">
               <option>BJ-01-01号大棚</option>
@@ -147,43 +147,41 @@
               <option>地块产量</option>
             </select>
           </p>
+          <table class="border table-month w075 mt20" border="1">
+            <tr>
+              <td>1月份</td>
+              <td></td>
+              <td>2月份</td>
+              <td></td>
+              <td>3月份</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>4月份</td>
+              <td></td>
+              <td>5月份</td>
+              <td></td>
+              <td>6月份</td>
+              <td>300</td>
+            </tr>
+            <tr>
+              <td>7月份</td>
+              <td>1.0</td>
+              <td>8月份</td>
+              <td></td>
+              <td>9月份</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>10月份</td>
+              <td></td>
+              <td>11月份</td>
+              <td></td>
+              <td>12月份</td>
+              <td></td>
+            </tr>
+          </table>
         </div>
-        <p class="text-left border-bottom pb10 mb10">亩商品量(kg/亩)</p>
-        <table class="border table-month" border="1">
-          <tr>
-            <td>1月份</td>
-            <td></td>
-            <td>2月份</td>
-            <td></td>
-            <td>3月份</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>4月份</td>
-            <td></td>
-            <td>5月份</td>
-            <td></td>
-            <td>6月份</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>7月份</td>
-            <td></td>
-            <td>8月份</td>
-            <td></td>
-            <td>9月份</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>10月份</td>
-            <td></td>
-            <td>11月份</td>
-            <td></td>
-            <td>12月份</td>
-            <td></td>
-          </tr>
-        </table>
-        <p class="text-right mt20">总产量: 0kg/亩</p>
         <div class="center mt20">
           <span class="button bg-yellow mr20">保存</span>
           <span class="button bg-gray close-add">返回</span>
