--- a/排产管理部分/view/schedulingMgmt.html
+++ b/排产管理部分/view/schedulingMgmt.html
@@ -275,6 +275,91 @@
       
       </div>
     </div>
+    <!-- 确认排产管理 -->
+    <div class="dialog-scheduling scheduling-done-content hide">
+      <div class="dialog-content">
+        <p class="center border-bottom pb10 mb10">确认排产计划 <span class="right color-gray close-done">X</span></p>
+        <div class="add-detail mb10">
+            <p class="mb10"><span class="mr30">种植区:</span><select class="select-160 mr20">
+              <option>BJ-01-01号大棚</option>
+              <option>BJ-01-01号大棚</option>
+            </select>
+              作物种类：
+            <select class="select-160">
+                <option>小黄瓜</option>
+              <option>茄子</option>
+            </select><p>
+            <p class="mb10">
+              种植品种：
+            <select class="select-160 mr20">
+              <option>无品种</option>
+              <option>西兰花</option>
+            </select>
+              种植标准：
+             <select class="select-160">
+              <option>无机</option>
+               <option>有机</option>
+            </select>
+            </p>
+          <p>定植时间：
+            <input type="date" class="select-160 mr20">
+            采收开始：
+             <input type="date" class="select-160">
+          </p>
+          <p class="mb10">植种结束：
+            <input type="date" class="select-160 mr20">
+            种植面积：
+            <input type="text" class="pinzhong"> <span>亩/3.9亩可用</span>
+          </p>
+          <p>预估产量：
+            <select class="select-160 mr20">
+              <option>亩产量</option>
+              <option>地块产量</option>
+            </select>
+          </p>
+          <table class="border table-month w075 mt20" border="1">
+            <tr>
+              <td>1月份</td>
+              <td></td>
+              <td>2月份</td>
+              <td></td>
+              <td>3月份</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>4月份</td>
+              <td></td>
+              <td>5月份</td>
+              <td></td>
+              <td>6月份</td>
+              <td>300</td>
+            </tr>
+            <tr>
+              <td>7月份</td>
+              <td>1.0</td>
+              <td>8月份</td>
+              <td></td>
+              <td>9月份</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>10月份</td>
+              <td></td>
+              <td>11月份</td>
+              <td></td>
+              <td>12月份</td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+        <div class="center mt20">
+          <span class="button bg-yellow mr20">确认</span>
+          <span class="button bg-gray close-done">返回</span>
+        </div>
+      
+      </div>
+    </div>
+
 </body>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/main.js"></script>
