生产计划编辑

--- a/css/base.css
+++ b/css/base.css
@@ -568,6 +568,7 @@ footer {
     left: 20px;
     z-index: 999999;
     text-align: left;
+    border-radius: 4px;
 }
 .select-160 {
   height: 30px;
