--- a/css/management.css
+++ b/css/management.css
@@ -221,7 +221,7 @@ input[type="date" i]{
   top: 0;
   right:0;
   height: 100%;
-  /*width: 300px;*/
+  width: 0;
   background-color: #ffffff;
   border: 1px solid #eeeeee;
   border-top: 0;
@@ -261,4 +261,11 @@ input[type="date" i]{
   line-height: 30px;
   width: 48px;
   text-align: center;
+}
+.hide-aside {
+  position: absolute;
+  left: -1px;
+  top: 50%;
+  margin-top: -60px;
+  width: 12px;
 }
