--- a/view/dialog-plan-edit.html
+++ b/view/dialog-plan-edit.html
@@ -63,7 +63,7 @@
                 <p>大棚： BG-01-01-大棚</p>
                 <p>作物： 青菜(西兰花)</p>
                 <p>面积： 2.8亩</p>
-                <p>定制开始： 2015-03-10</p>
+                <p>定植开始： 2015-03-10</p>
                 <p>采收开始： 2015-03-10</p>
                 <p>预估产量：7000.00 Kg</p>
                 <p>6月： 4000Kg</p>
@@ -149,7 +149,7 @@
         </div>
         <div class="output mb20">
            <p><img src="../images/cc_12.png" class="mr10">产量预估</p>
-           <!-- <div id="container" style="height: 150px;width:230px;"></div> -->
+           <div id="container" style="height: 150px;width:230px;"></div>
 
             <table class="border table-month" border="1" style="width:250px;">
               <tr>
