--- a/view/dialog-grow-mess.html
+++ b/view/dialog-grow-mess.html
@@ -143,7 +143,7 @@
           </div>
           <div class="tab-cont hide"></div>
         </div>
-        <div class="grow-message hide">
+        <div class="grow-message">
           <div class="left grow-message-img">
             <img src="../images/grow.png">
             <span>BJ-01-01号大棚 番杏(番杏)</span>
