--- a/view/growMgmt.html
+++ b/view/growMgmt.html
@@ -154,6 +154,7 @@
               <li class="tab-head bg-green">种植信息</li>
               <li class="tab-head">环境监控</li>
             </ul>
+            <img src="../images/border-right.jpg" class="left border-mess-left">
             <div class="tab-cont hide fl ">1</div>
             <div class="tab-cont show grow-mess">
               <div class="grow-mess-user">
