--- a/css/management.css
+++ b/css/management.css
@@ -291,6 +291,9 @@ input[type="date" i]{
     width: 100%;
     margin-top: 20px;
   }
+  .tab-grow .tab-cont {
+    position: relative;
+  }
   .tab-grow-ul{
     border-bottom: 1px solid #479e7d;
     width: 100%;
