--- a/view/dialog-scheduling-add2.html
+++ b/view/dialog-scheduling-add2.html
@@ -94,7 +94,7 @@
         </div>
       </div>
     </div>
-     <!-- 添加排产管理已选基地未耕状态-->
+     <!-- 添加排产管理已选基地未休耕状态-->
     <div class="dialog-scheduling scheduling-add-content">
       <div class="dialog-content">
         <p class="center border-bottom pb10">添加排产计划<span class="right color-gray close-add">X</span></p>
