--- a/view/dialog-grow-add2.html
+++ b/view/dialog-grow-add2.html
@@ -241,29 +241,6 @@
                   <img src="../images/cccc_07.png" height="12" width="12" style=" margin-left:23%">
                   <span class="right color-gray font12">5.12</span>
                 </p>
-              </div>       
-            </div>
-            <div class="grow-content">
-              <img src="../images/xx_11.png" height="12" width="22" class="arrow-grow hide">
-              <div class="left grow-img">
-                <img src="../images/grow.png">
-                <span>面积 10 亩</span>
-              </div>
-              <div class="left w07">
-                <p><span class="color-gray">BJ-01-01号大棚 </span>
-                  <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
-                  <img src="../images/tu_21.png" class="right scheduling-icon">
-                  <img src="../images/tu_15.png" class="right scheduling-icon">
-                </p>
-                <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
-                <span class="font12 color-gray" style="margin:3px 0 0 30%">12天</span>
-                <p style="margin-top:-5px;">
-                  <span class="bg-green grow-time" style="width:40%"></span>
-                  <span class="bg-gray grow-time" style="width:60%"></span>
-                  <span class="left color-gray font12">4.12</span>
-                  <img src="../images/cccc_07.png" height="12" width="12" style=" margin-left:23%">
-                  <span class="right color-gray font12">5.12</span>
-                </p>
               </div>        
             </div>
 
@@ -616,52 +593,95 @@
           </div>
       </div>
     </div>
-     <!-- 添加种植管理已选基地休耕状态-->
-    <div class="dialog-scheduling scheduling-add-content hide">
+     <!-- 添加排产管理已选基地未休耕状态-->
+    <div class="dialog-scheduling scheduling-add-content">
       <div class="dialog-content">
-      <p class="center border-bottom pb10">添加种植<span class="right color-gray close-add">X</span></p>
-      <p class="text-left border-bottom pb10 mt20">基本信息</p>
-      <div class="add-detail mb20">
-          <p class="mb10"><span class="mr30">种植区:</span><select class="select-160 mr20">
-            <option>BJ-01-01号大棚</option>
-            <option>BJ-01-01号大棚</option>
-          </select>
-            作物种类：
-          <select class="bg-gray select-160">
-            <option>休耕</option>
-          </select><p>
-          <p class="mb10">
-            种植品种：
-          <select class="select-160 mr20">
-            <option>无品种</option>
-            <option>津优1号</option>
-          </select>
-            种植标准：
-           <select class="select-160">
-            <option>有机</option>
-            <option>绿色</option>
-            <option>无公害</option>
-          </select>
-          </p>
+        <p class="center border-bottom pb10">添加种植<span class="right color-gray close-add">X</span></p>
+         <p class="text-left border-bottom pb10 mt20">基本信息</p>
+        <div class="add-detail mb10">
+            <p class="mb10"><span class="mr30">种植区:</span><select class="select-160 mr20">
+              <option>BJ-01-01号大棚</option>
+              <option>BJ-01-01号大棚</option>
+            </select>
+              作物种类：
+            <select class="select-160">
+              <option>小黄瓜</option>
+              <option>茄子</option>
+            </select><p>
+            <p class="mb10">
+              种植品种：
+            <select class="select-160 mr20">
+              <option>无品种</option>
+              <option>西兰花</option>
+            </select>
+              种植标准：
+             <select class="select-160">
+              <option>有机</option>
+              <option>绿色</option>
+              <option>无公害</option>
+            </select>
+            </p>
         </div>
-      <p class="text-left border-bottom pb10 mt20">休耕时间</p>
-      <div class="add-detail">
-           <p>开始时间：
-          <input type="date" class="select-160 mr20">
-          结束时间：
-           <input type="date" class="select-160">
-        </p>
-        <p>作物种类：
-          <input type="text" class="pinzhong"> <span>亩/3.9亩可用</p>
-      </div>
-      <div class="center mt20">
-        <span class="button bg-yellow mr20">保存</span>
-        <span class="button bg-gray close-add">返回</span>
-      </div>
+        <p class="text-left border-bottom pb10 mt20">采收信息</p>
+        <div class="add-detail mb10">
+          <p>定植时间：
+            <input type="date" class="select-160 mr20">
+            采收开始：
+             <input type="date" class="select-160">
+          </p>
+          <p class="mb10">植种结束：
+            <input type="date" class="select-160 mr20">
+            种植面积：
+            <input type="text" class="pinzhong"> <span>亩/3.9亩可用</span>
+          </p>
+          <p>预估产量：
+            <select class="select-160 mr20">
+              <option>亩产量</option>
+              <option>地块产量</option>
+            </select>
+          </p>
+          <table class="border table-month w075 mt20" border="1">
+            <tr>
+              <td>1月份</td>
+              <td></td>
+              <td>2月份</td>
+              <td></td>
+              <td>3月份</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>4月份</td>
+              <td></td>
+              <td>5月份</td>
+              <td></td>
+              <td>6月份</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>7月份</td>
+              <td></td>
+              <td>8月份</td>
+              <td></td>
+              <td>9月份</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>10月份</td>
+              <td>120</td>
+              <td>11月份</td>
+              <td>65</td>
+              <td>12月份</td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+        <div class="center mt20">
+          <span class="button bg-yellow mr20">保存</span>
+          <span class="button bg-gray close-add">返回</span>
+        </div>
       </div>
     </div>
-  </div>
-  
+ </div>
 </body>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/grop.js"></script>
