--- a/view/dialog-grow-upload.html
+++ b/view/dialog-grow-upload.html
@@ -40,7 +40,7 @@
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
                   <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
-                  <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
+                  <img src="../images/tu_21.png" class="right scheduling-icon">
                   <img src="../images/tu_15.png" class="right scheduling-icon">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
@@ -206,7 +206,7 @@
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
                   <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
-                  <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
+                  <img src="../images/tu_21.png" class="right scheduling-icon">
                   <img src="../images/tu_15.png" class="right scheduling-icon">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
@@ -229,7 +229,7 @@
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
                   <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
-                  <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
+                  <img src="../images/tu_21.png" class="right scheduling-icon">
                   <img src="../images/tu_15.png" class="right scheduling-icon">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
@@ -252,7 +252,7 @@
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
                   <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
-                  <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
+                  <img src="../images/tu_21.png" class="right scheduling-icon">
                   <img src="../images/tu_15.png" class="right scheduling-icon">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
@@ -276,7 +276,7 @@
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
                   <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
-                  <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
+                  <img src="../images/tu_21.png" class="right scheduling-icon">
                   <img src="../images/tu_15.png" class="right scheduling-icon">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
@@ -441,7 +441,7 @@
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
                   <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
-                  <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
+                  <img src="../images/tu_21.png" class="right scheduling-icon">
                   <img src="../images/tu_15.png" class="right scheduling-icon">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
@@ -661,7 +661,7 @@
       </div>
     </div>
     <!-- 导入种植信息 -->
-    <div class="dialog-scheduling scheduling-upload-content hide">
+    <div class="dialog-scheduling scheduling-upload-content">
       <div class="dialog-content center" style="width:418px">
         <p class="center border-bottom pb10">导入种植信息<span class="right color-gray close-upload">X</span></p>
 
